<resources>
    <string name="app_name">HyperGarageSale</string>
    <string name="title_hint">Enter title of the item</string>
    <string name="price_hint">Enter price</string>
    <string name="desc_hint">Enter description of the item</string>
    <string name="button_post">Post</string>
    <string name="new_post_snackbar">Thanks for posting!</string>

    <string name="title_activity_browse_posts">BrowsePostActivity</string>
    <string name="fullListButton_text_activity_browse_posts">Full List</string>

    <string name="title_activity_detailed_post">DetailedPostActivity</string>
    <string name="to_full_size_activity_detailed_post">Click photos area to see Full-size</string>

    <string name="title_activity_edit_detailed_post">EditDetailedPostActivity</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="search_hint">Enter keyword</string>

    <string name="title_header">Title: </string>
    <string name="price_header">Price: </string>
    <string name="description_header">Description: </string>

    <string name="EditDone">EditDone</string>
    <string name="Save">Save</string>
    <string name="Edit">Edit</string>
    <string name="Search">Search</string>

    <string name="desc1_post_text_view">Holds first photo image</string>
    <string name="desc2_post_text_view">A red X to replace edit pencil in row</string>

    <string name="preference_file_key">com.ucsc.taiyo.hypergaragesale.PREFERENCE_FILE_KEY</string>

</resources>
